Launching psyone.yxz

--- a/content/en/4.about.md
+++ b/content/en/4.about.md
@@ -13,30 +13,27 @@ About
 A few words about me
 
 #intro
-Developer and art director based in Nice, France
+Fullstack engineer, Web3 innovator, and digital creator based in Nigeria. With over 5 years of experience, I seamlessly fuse robust development with creative design to craft bespoke web experiences that not only captivate but also convert. Whether collaborating with dynamic teams or leading projects independently, my unwavering attention to detail and commitment to excellence have consistently delivered exceptional results.
 
-With over 6 years of experience in the field, I enjoy blending beauty, design and technology to create unique, bespoke web experiences that exceed my clients' expectations.
-
-Whether collaborating with teams or leading design projects, my attention to detail and dedication to excellence have earned me a reputation for delivering exceptional results.
-
-Even when I'm not working for my clients, I'm always looking for new things to learn and experiment with. I continue to develop my design and development skills by working on personal projects, reading books, etc...
+Beyond code and design, I'm a racing and football enthusiast, a undedicated gym goer, and an aspiring videographer. When I'm not building next-generation web solutions, you'll find me honing my skills in Figma, exploring personal projects, and diving into new learning opportunities to expand the horizons of technology and creativity.
 
 #experiences
   :::experiences
   ---
   experiences:
-    - title: Front-End Developer
-      company: 360&1
-      date: 2021 - Today
+    - title: Fullstack Developer
+      company: Overfunded
+      date: 2022
     - title: CTO
-      company: Helpr
+      company: Aggregator
+      date: 2023
+    - title:  Web Developer
+      company: Shadowswap
       date: 2023 - Today
-    - title: Artistic Director
-      company: Maison Hochard
-      date: 2022 - Today
-    - title: Web Developer
-      company: Freelance
-      date: 2019 - Today
+    - title: Founder
+      company: Nairanow
+      date: Coming Soon
+
   ---
   :::
 
