--- a/content/en/1.index.md
+++ b/content/en/1.index.md
@@ -1,7 +1,7 @@
 ::home
 #hero_title
-The efficiency of one, the talent of three. Why look elsewhere?
+Fullstack by design, decentralized by vision.
 
 #hero_subtitle
-Developer, art director and photographer, I fuse technicality and aestheticism to bring a unique dimension to my work. Passionate about beauty, I give life to projects that captivate and convert
+I craft digital experiences that blend robust code with innovative Web3 solutions—all built with simplicity and purpose.
 ::
